--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/stats.js": "^0.17.0",
     "@types/three": "^0.144.0",
     "prettier": "^2.8.3",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
   },
   "dependencies": {
+    "stats.js": "^0.17.0",
     "three": "^0.145.0"
   }
 }
